--- a/categories.html
+++ b/categories.html
@@ -8,9 +8,11 @@ permalink: /categories/
   <h1>Categories</h1>
   <ul>
     {% for category in site.categories %}
-      <li>
-        <a href="{{ site.baseurl }}/categories/{{ category[0] | slugify }}/">{{ category[0] }}</a>
-      </li>
+      {% if category[0] and category[0] != 0 %}
+        <li>
+          <a href="{{ site.baseurl }}/categories/{{ category[0] | slugify }}/">{{ category[0] }}</a>
+        </li>
+      {% endif %}
     {% endfor %}
   </ul>
 </div>
